--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Full Stack project using Mern",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javscript",
@@ -12,5 +12,8 @@
     "frontend"
   ],
   "author": "Ranjan Chauhan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
